--- a/.github/workflows/static.yml
+++ b/.github/workflows/static.yml
@@ -26,6 +26,8 @@ jobs:
         uses: actions/checkout@v4
       - name: setup
         uses: actions/configure-pages@v5
+      - name: magic.html
+        run: echo -e "<html>\n<body><p>$(date)</p></body>" >>magic.html
       - name: upload
         uses: actions/upload-pages-artifact@v3
         with:
